Update README with standardized chunking defaults, low-confidence guardrail details, and retrieval evaluation enhancements; add matplotlib dependency; introduce new low-confidence query in JSON; modify evaluation script for charting; enhance main script to handle low-confidence scenarios; improve retriever with caching and guardrail thresholds.

--- a/notebooks/Colab_Retrieval_Demo.ipynb
+++ b/notebooks/Colab_Retrieval_Demo.ipynb
@@ -63,11 +63,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Evaluation (only if labels file exists)\n",
+        "# Evaluation (only if labels file exists) with chart\n",
         "import os\n",
         "labels_csv = \"data/labels.csv\"\n",
         "if os.path.exists(labels_csv):\n",
-        "    !python scripts/eval_retrieval.py --queries_json data/queries.json --labels_csv data/labels.csv --k 10\n",
+        "    !python scripts/eval_retrieval.py --queries_json data/queries.json --labels_csv data/labels.csv --k 10 --chart\n",
         "else:\n",
         "    print(\"No labels.csv present; skip eval.\")\n"
       ]
