Add alpha sweeper functionality to README and Colab demo; include instructions for selecting optimal α values for fusion and enhance evaluation process with new metrics and visualizations.

--- a/notebooks/Colab_Retrieval_Demo.ipynb
+++ b/notebooks/Colab_Retrieval_Demo.ipynb
@@ -71,6 +71,28 @@
         "else:\n",
         "    print(\"No labels.csv present; skip eval.\")\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Alpha sweeper (choose best fusion α)\n",
+        "Runs the sweeper over a small grid and plots Recall@k vs α for Tier1/Tier2.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Run alpha sweeper (requires labels)\n",
+        "import os\n",
+        "if os.path.exists(\"data/labels.csv\"):\n",
+        "    !python scripts/alpha_sweeper.py --queries_json data/queries.json --labels_csv data/labels.csv --k 10 --alphas 0.5,0.65,0.7,0.8 --chart\n",
+        "else:\n",
+        "    print(\"No labels.csv present; skip alpha sweeper.\")\n"
+      ]
     }
   ],
   "metadata": {
