Add cache behavior demonstration to Colab notebook; enhance retriever with verbose logging for cache hits and loaded versions.

--- a/notebooks/Colab_Retrieval_Demo.ipynb
+++ b/notebooks/Colab_Retrieval_Demo.ipynb
@@ -93,6 +93,34 @@
         "else:\n",
         "    print(\"No labels.csv present; skip alpha sweeper.\")\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Cache behavior demo\n",
+        "Run the same batch twice with `--verbose_retriever` to see query cache hits and BM25 cache version hits.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# First run (will populate caches)\n",
+        "!python scripts/main.py --queries data/queries.json --device cuda --pretty --verbose_retriever --llm Qwen/Qwen2.5-3B-Instruct\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Second run (should show [cache] hit and [bm25_cache] hit messages)\n",
+        "!python scripts/main.py --queries data/queries.json --device cuda --pretty --verbose_retriever --llm Qwen/Qwen2.5-3B-Instruct\n"
+      ]
     }
   ],
   "metadata": {
